Exception handling with try catch blocks